Adding assets folder

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </tr>
                 <tr class="transactions">
                     <td class="description">Criação website</td>
-                    <td class="expense">R$ 5.000,00</td>
+                    <td class="income">R$ 5.000,00</td>
                     <td class="date">23/01/2021</td>
                 </tr>
                 <tr class="transactions">
